@@ -7,7 +7,7 @@ Quickstart
 
 .. _here: ../install.html
 
-If you have any ``easy_install`` (otherwise see here_) just type::
+If you have the ``easy_install`` tool (otherwise see here_) just type::
 
     easy_install -U py 
 
@@ -30,7 +30,7 @@ and will see output like this:
 .. sourcecode:: python 
 
     =========================== test session starts ============================
-    python: platform linux2 -- Python 2.6.2
+    python: platform linux2 -- Python 2.6.2 -- pytest-1.1.0
     test object 1: test_sample.py
 
     test_sample.py F
@@ -51,15 +51,18 @@ a progress report and important details of the failure.
 
 **Where to go from here**
 
-`tutorials`_: a collection of starting points with code examples
-
 `features`_: overview and description of test features
 
-`contact`_: many ways for feedback and questions 
+`plugins`_: a list of available plugins which each contain usage examples 
+
+`tutorials`_: some blog entries and starting points with code examples
+
+`contact`_: if you want to feedback or have problems
 
 .. _`contact`: ../contact.html
 .. _`automatically collected`: features.html#autocollect
 .. _install: ../install.html
+.. _plugins: plugin/index.html
 .. _features: features.html
 .. _tutorials: talks.html
 
