@@ -1,1 +1,7 @@
-doc/changelog.txt
+
+see doc/announce/release-1.1.0.txt for a summary 
+of the last minor release
+
+and 
+
+see doc/changelog.txt for details
